[package]
name = "enki"
version = "0.1.0"
edition = "2021"

[workspace]
member = [
    ".",
    "lib/treelight",
    "lib/md_it_treesitter",
]

[dependencies]
axum = "0.5.17"
axum-extra = "0.4.2"
axum-macros = "0.3.1"

tokio = { version="1.24.1", features = ["full"] }

sea-orm = { version="0.11.0", features=["runtime-tokio-rustls", "sqlx-postgres", "debug-print"] }
chrono = "0.4.23"

serde = { version="1.0.152", features = ["derive"] }
serde_json = "1"

markdown-it = "0.4.0"
md_it_treesitter = {path="lib/md_it_treesitter"}
treelight = {path="lib/treelight"}

tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"]}
jsonwebtoken = "8.2.0"

log = "0.4.0"
env_logger = "0.9.0"

dotenv = "0.15"
config = "0.11"
