[package]
name = "enki"
version = "0.1.0"
edition = "2021"

[workspace]
member = [
    ".",
    "lib/jwt-auth",
    "lib/treelight",
    "lib/md_it_treesitter",
    "lib/md_it_custom_container",
]

[dependencies]
axum = {version="0.6.7", features = ["headers", "json"] }
axum-extra = "0.4.2"
axum-macros = "0.3.1"

tokio = { version="1.24.1", features = ["full"] }

sea-orm = { version="0.11.0", features=["runtime-tokio-rustls", "sqlx-postgres", "debug-print"] }
chrono = "0.4.23"

serde = { version="1.0.152", features = ["derive"] }
serde_json = "1"

markdown-it = "0.4.0"
md_it_treesitter = {path="lib/md_it_treesitter"}
md_it_custom_container = {path="lib/md_it_custom_container"}
treelight = {path="lib/treelight"}

tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"]}
jwt-auth = {path="lib/jwt-auth"}

log = "0.4.0"
env_logger = "0.9.0"

dotenv = "0.15"
config = "0.11"
rss = "2.0.5"
